--- a/Frontend/src/app/pages/dashboard/panel/panel.component.html
+++ b/Frontend/src/app/pages/dashboard/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div id="employee-panels">
-  <clr-accordion [clrAccordionMultiPanel]="true" class="left">
+  <clr-accordion [clrAccordionMultiPanel]="toggle" class="left">
     <clr-accordion-panel *ngFor="let e of employees">
       <clr-accordion-title>
         {{e.vorname + " " + e.name}}
@@ -26,4 +26,5 @@
       </clr-accordion-content>
     </clr-accordion-panel>
   </clr-accordion>
+  <button class="btn" (click)="toggleView()">Toggle</button>
 </div>
