--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.html
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.html
@@ -26,6 +26,10 @@
               <td>Arbeitskonto:</td>
               <td>{{user.arbeitskonto}} Stunden</td>
             </tr>
+            <tr>
+              <td>Arbeitsgruppe:</td>
+              <td>user.arbeitsgruppe TO BE ADDED</td>
+            </tr>
           </table>
         </div>
       </div>
