--- a/Frontend/src/app/pages/dashboard/panel/panel.component.scss
+++ b/Frontend/src/app/pages/dashboard/panel/panel.component.scss
@@ -1,4 +1,7 @@
-table {
+#employee-panels {
+  width: 80%;
+
+  table {
     border: none;
     width: 100%;
     text-align: center;
@@ -12,3 +15,9 @@ table {
       }
     }
   }
+
+  hr {
+    width: 10%;
+    text-align: left;
+  }
+}
