bla bla server client verbindung

--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 
   </ng-container>
 
-  <ng-container *ngIf="data.rechteklasse === 'admin' || data.rechteklasse === 'root'">
+  <ng-container *ngIf="data?.rechteklasse === 'admin' || data?.rechteklasse === 'root'">
     <a clrVerticalNavLink routerLinkActive="active" routerLink="./register">
       <clr-icon shape="users" clrVerticalNavIcon></clr-icon>
       Benutzer hinzufügen
