--- a/Frontend/src/app/pages/dashboard/panel/panel.component.html
+++ b/Frontend/src/app/pages/dashboard/panel/panel.component.html
@@ -26,5 +26,5 @@
       </clr-accordion-content>
     </clr-accordion-panel>
   </clr-accordion>
-  <button class="btn" (click)="toggleView()">Toggle</button>
+  <button class="btn" (click)="toggleView()">Mehrere auswählen? {{toggle | reachable}}</button>
 </div>
