Error handling for server

--- a/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
+++ b/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
@@ -1,4 +1,4 @@
-<clr-wizard #wizardmd [(clrWizardOpen)]="open" clrWizardSize="md">
+<clr-wizard #wizardmd [(clrWizardOpen)]="openOnStart" clrWizardSize="md">
     <clr-wizard-title>Medium-Sized Wizard</clr-wizard-title>
 
     <clr-wizard-button [type]="'cancel'">Cancel</clr-wizard-button>
