--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -1,5 +1,6 @@
 <div id="settings">
   <h1>Einstellungen</h1>
+  Ihre aktuellen Einstellungen sehen Sie <a routerLink="/employee/me">hier</a>
   <br />
   <hr />
   <h2>Account Daten ändern</h2>
