--- a/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
+++ b/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
@@ -1,23 +1,46 @@
-<clr-wizard #wizardmd [(clrWizardOpen)]="openOnStart" clrWizardSize="md">
-    <clr-wizard-title>Medium-Sized Wizard</clr-wizard-title>
+<clr-wizard #wizard [(clrWizardOpen)]="open" [clrWizardSize]="'md'" (clrWizardOnFinish)="finish()"
+  (clrWizardOnCancel)="finish()">
 
-    <clr-wizard-button [type]="'cancel'">Cancel</clr-wizard-button>
-    <clr-wizard-button [type]="'previous'">Back</clr-wizard-button>
-    <clr-wizard-button [type]="'next'">Next</clr-wizard-button>
-    <clr-wizard-button [type]="'finish'">Finish</clr-wizard-button>
+  <clr-wizard-title>
+    Neue Arbeitsgruppe erstellen
+  </clr-wizard-title>
 
-    <clr-wizard-page>
-        <ng-template clrPageTitle>Page 1</ng-template>
-        ...
-    </clr-wizard-page>
+  <clr-wizard-button [type]="'cancel'">Abbrechen</clr-wizard-button>
+  <clr-wizard-button [type]="'previous'">Zurück</clr-wizard-button>
+  <clr-wizard-button [type]="'next'">Weiter</clr-wizard-button>
+  <clr-wizard-button [type]="'finish'">Fertigstellen</clr-wizard-button>
 
-    <clr-wizard-page>
-        <ng-template clrPageTitle>Page 2</ng-template>
-        ...
-    </clr-wizard-page>
+  <clr-wizard-page>
+    <ng-template clrPageTitle>Seite 1</ng-template>
+    <clr-input-container>
+      <label>Wie soll die neue Arbeitsgruppe heißen?</label>
+      <input clrInput placeholder="Name?" [(ngModel)]="model.name" />
+    </clr-input-container>
+    <br />
+    <clr-input-container>
+      <label>Wer soll die neue Arbeitsgruppe leiten?</label>
+      <input clrInput placeholder="Leiter?" [(ngModel)]="model.admin" />
+    </clr-input-container>
+  </clr-wizard-page>
 
-    <clr-wizard-page>
-        <ng-template clrPageTitle>Page 3</ng-template>
-        ...
-    </clr-wizard-page>
+  <clr-wizard-page>
+    <ng-template clrPageTitle>Seite 2</ng-template>
+    <clr-input-container>
+      <label>Wer soll Mitglied der Arbeitsgruppe sein?</label>
+      <input clrInput placeholder="Mitglieder?" #stepThreeInput [(ngModel)]="current" />
+    </clr-input-container>
+    <button class="btn" (click)="addToList()">Hinzufügen</button>
+    <ul *ngFor="let m of model.mitglieder;let i = index">
+      <li>
+        {{m}}
+        <clr-icon shape="times" (click)="removeEmployeeFromList(i)" style="float: right"></clr-icon>
+      </li>
+    </ul>
+  </clr-wizard-page>
+
+  <clr-wizard-page>
+    <ng-template clrPageTitle>Page 4</ng-template> <!-- mandatory -->
+    <clr-input-container>
+    </clr-input-container>
+  </clr-wizard-page>
 </clr-wizard>
