--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -12,11 +12,14 @@
     <hr />
     <br />
 
-    <ng-container *ngIf="valid">
+    <ng-container *ngIf="['admin', 'root', 'personalabteilung', 'gruppenleiter'].includes(user.rechteklasse)">
         <h2>Arbeitsgruppen</h2>
-        <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
-        <h1>{{open}}</h1>
-        <dashboard-add-group-wizard [(open)]="open"></dashboard-add-group-wizard>
-        <dashboard-groups [groups]="samples"></dashboard-groups>
+
+        <ng-container *ngIf="['admin', 'root'].includes(user.rechteklasse)">
+            <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
+            <dashboard-add-group-wizard [(open)]="open"></dashboard-add-group-wizard>
+        </ng-container>
+        
+        <dashboard-groups [groups]="groups"></dashboard-groups>
     </ng-container>
 </div>
