--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.html
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.html
@@ -2,7 +2,7 @@
   <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
     <div class="card">
       <div class="card-header" id="employee-stats-header">
-        {{user.vorname + " " + user.name}}
+        {{user | employeeName}}
       </div>
       <div class="card-block">
         <div class="card-title">
