--- a/Frontend/src/app/pages/dashboard/groups/groups.component.html
+++ b/Frontend/src/app/pages/dashboard/groups/groups.component.html
@@ -8,11 +8,23 @@
     <clr-dg-cell>{{group.arbeitsgruppenID}}</clr-dg-cell>
     <clr-dg-cell>{{group.bezeichnung}}</clr-dg-cell>
     <clr-dg-cell>
-        <ul *ngFor="let inner of groupMembers[i]">
-            <li>{{inner | employeeName}}</li>
-        </ul>
+      <ul *ngFor="let inner of groupMembers[i]">
+        <li>
+          <a routerLink="/employee/{{inner.personalnummer}}">
+            {{inner | employeeName}}
+          </a>
+            <clr-icon shape="check" class="is-success" *ngIf="inner.erreichbar"></clr-icon>
+            <clr-icon shape="times" class="is-error" *ngIf="!inner.erreichbar"></clr-icon>
+        </li>
+      </ul>
     </clr-dg-cell>
-    <clr-dg-cell>{{leaders[i] | employeeName}}</clr-dg-cell>
+    <clr-dg-cell>
+      <a routerLink="/employee/{{leaders[i].personalnummer}}">
+        {{leaders[i] | employeeName}}
+      </a>
+      <clr-icon shape="check" class="is-success" *ngIf="leaders[i].erreichbar"></clr-icon>
+      <clr-icon shape="times" class="is-error" *ngIf="!leaders[i].erreichbar"></clr-icon>
+    </clr-dg-cell>
   </clr-dg-row>
 
   <clr-dg-footer>{{groups.length}} Gruppen</clr-dg-footer>
