Little correcting for form

--- a/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
+++ b/Frontend/src/app/pages/dashboard/add-group-wizard/add-group-wizard.component.html
@@ -1,4 +1,4 @@
-<clr-wizard #wizard [(clrWizardOpen)]="open" [clrWizardSize]="'md'" (clrWizardOnFinish)="finish()"
+<clr-wizard #wizard [(clrWizardOpen)]="open" [clrWizardSize]="'md'" (clrWizardOnFinish)="send()"
   (clrWizardOnCancel)="finish()">
 
   <clr-wizard-title>
