--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,9 @@
 
         <ng-container *ngIf="['admin', 'root', 'personalabteilung'].includes(user.rechteklasse)">
             <button class="btn" (click)="reload()">Aktualisieren</button>
-            <dashboard-groups [groups]="groups"></dashboard-groups>
+            <ng-container *ngIf="groups">
+                <dashboard-groups [groups]="groups"></dashboard-groups>
+            </ng-container>
         </ng-container>
     </ng-container>
 </div>
