--- a/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
+++ b/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
@@ -1,43 +1,48 @@
 <ng-container *ngIf="employees?.length && valid">
 
-  <h2>Mitarbeiter*innen der Gruppe {{group?.bezeichnung}}</h2>
+  <h2>Mitarbeiter*innen der Gruppe {{group?.bezeichnung || "Fehler"}}</h2>
 
   <ng-container *ngIf="user.rechteklasse === 'headOfDepartment' || user.rechteklasse === 'root'">
     <button class="btn" (click)="addUser()">Mitarbeiter*in hinzufügen</button>
     <button class="btn">Mitarbeiter*in entfernen</button>
     <dashboard-add-user-to-group [(opened)]="addToGroup" [mode]="'add'"></dashboard-add-user-to-group>
   </ng-container>
+  <ng-container *ngIf="employees && employees.length != 0">
+    <clr-datagrid *ngIf="ready">
+      <clr-dg-column>Personalnummer</clr-dg-column>
+      <clr-dg-column>Name</clr-dg-column>
+      <clr-dg-column>Status</clr-dg-column>
+      <clr-dg-column>Rechteklasse</clr-dg-column>
+      <clr-dg-column>Anwesend</clr-dg-column>
 
-  <clr-datagrid>
-    <clr-dg-column>Personalnummer</clr-dg-column>
-    <clr-dg-column>Name</clr-dg-column>
-    <clr-dg-column>Status</clr-dg-column>
-    <clr-dg-column>Rechteklasse</clr-dg-column>
-    <clr-dg-column>Anwesend</clr-dg-column>
+      <clr-dg-row *clrDgItems="let employee of employees">
+        <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
+        <clr-dg-cell>
+          <a routerLink="/employee/{{employee.personalnummer}}">
+            {{employee | employeeName}}
+          </a>
+        </clr-dg-cell>
+        <clr-dg-cell>{{employee.status}}</clr-dg-cell>
+        <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
+        <clr-dg-cell>
+          <clr-icon shape="check" class="is-success" *ngIf="employee.erreichbar"></clr-icon>
+          <clr-icon shape="times" class="is-error" *ngIf="!employee.erreichbar"></clr-icon>
+        </clr-dg-cell>
+      </clr-dg-row>
 
-    <clr-dg-row *clrDgItems="let employee of employees">
-      <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
-      <clr-dg-cell>
-        <a routerLink="/employee/{{employee.personalnummer}}">
-          {{employee | employeeName}}
-        </a>
-      </clr-dg-cell>
-      <clr-dg-cell>{{employee.status}}</clr-dg-cell>
-      <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
-      <clr-dg-cell>
-        <clr-icon shape="check" class="is-success" *ngIf="employee.erreichbar"></clr-icon>
-        <clr-icon shape="times" class="is-error" *ngIf="!employee.erreichbar"></clr-icon>
-      </clr-dg-cell>
-    </clr-dg-row>
+      <clr-dg-footer>
+        <clr-dg-pagination #pagination [clrDgPageSize]="10">
+          <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Benutzer pro Seite</clr-dg-page-size>
+          {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
+          von {{pagination.totalItems}} Angestellten insgesamt
+        </clr-dg-pagination>
+      </clr-dg-footer>
 
-    <clr-dg-footer>
-      <clr-dg-pagination #pagination [clrDgPageSize]="10">
-        <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Benutzer pro Seite</clr-dg-page-size>
-        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        von {{pagination.totalItems}} Angestellten insgesamt
-      </clr-dg-pagination>
-    </clr-dg-footer>
+    </clr-datagrid>
 
-  </clr-datagrid>
+    <div *ngIf="!ready">
+      <h1>Lädt...</h1>
+    </div>
+  </ng-container>
 
 </ng-container>
