Added production mode for most, some other stuff (remodelling and stuff)

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,31 +1,40 @@
 <div id="dashboard">
 
+  <ng-container *ngIf="['admin', 'root', 'headOfDepartment'].includes(user.rechteklasse)">
+    <h2>Arbeitsgruppen</h2>
+
+    <ng-container *ngIf="['admin', 'root'].includes(user.rechteklasse)">
+      <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
+      <dashboard-add-group-wizard [(open)]="open"></dashboard-add-group-wizard>
+    </ng-container>
+
     <ng-container *ngIf="['admin', 'root', 'headOfDepartment'].includes(user.rechteklasse)">
-        <h2>Arbeitsgruppen</h2>
+      <button class="btn" (click)="reload()">Aktualisieren</button>
+      <ng-container *ngIf="groups">
+        <dashboard-groups [groups]="groups"></dashboard-groups>
+      </ng-container>
+    </ng-container>
+  </ng-container>
 
-        <ng-container *ngIf="['admin', 'root'].includes(user.rechteklasse)">
-            <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
-            <dashboard-add-group-wizard [(open)]="open"></dashboard-add-group-wizard>
-        </ng-container>
+  <br />
+  <hr />
+  <br />
 
-        <ng-container *ngIf="['admin', 'root', 'headOfDepartment'].includes(user.rechteklasse)">
-            <button class="btn" (click)="reload()">Aktualisieren</button>
-            <ng-container *ngIf="groups">
-                <dashboard-groups [groups]="groups"></dashboard-groups>
-            </ng-container>
-        </ng-container>
+  <ng-container *ngFor="let g of userGroups;let i = index">
+    <dashboard-group-overview *ngIf="!isMobile" [group]="g.arbeitsgruppenID"></dashboard-group-overview>
+    <dashboard-groups-panel *ngIf="isMobile" [group]="g.arbeitsgruppenID"></dashboard-groups-panel>
+
+    <ng-container
+      *ngIf="user.rechteklasse === 'headOfDepartment' || user.rechteklasse === 'admin' || user.rechteklasse === 'root'">
+      <button class="btn" (click)="addUser(i)">Mitarbeiter*in hinzufügen</button>
+      <button class="btn" (click)="removeUser(i)">Mitarbeiter*in entfernen</button>
+
+      <dashboard-add-user-to-group [(opened)]="addToGroup[i]" [mode]="'add'" [group]="g"></dashboard-add-user-to-group>
+      <dashboard-add-user-to-group [(opened)]="removeFromGroup[i]" [mode]="'remove'" [group]="g">
+      </dashboard-add-user-to-group>
     </ng-container>
 
-    <br />
     <hr />
-    <br />
-    
-    <ng-container *ngIf="!isMobile">
-        <ng-container *ngFor="let g of userGroups">
-            <dashboard-group-overview [group]="g"></dashboard-group-overview>
-        </ng-container>
-    </ng-container>
-    <ng-container *ngIf="isMobile">
-        <dashboard-panel [employees]="employees"></dashboard-panel>
-    </ng-container>
+
+  </ng-container>
 </div>
