--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -19,7 +19,7 @@
       Aktuell: {{currentSettings.idle || 10}} Minuten
     </div>
     <div class="right">
-      Ausloggen nach:
+      Automatisches ausloggen nach weiteren Minuten:
         <settings-select [options]="logoutOptions" [type]="'logOut'" class="centered"></settings-select>
       <br />
       Aktuell: {{currentSettings.logOut || 2}} Minuten
