--- a/Frontend/src/app/ui/layout/header/header.component.scss
+++ b/Frontend/src/app/ui/layout/header/header.component.scss
@@ -4,3 +4,9 @@
   -ms-user-select: none;
   user-select: none;
 }
+
+@media (max-width: 768px) {                  
+   a#link_1 {
+      display: none;
+   }
+}
