--- a/Frontend/src/app/pages/settings/select/select.component.scss
+++ b/Frontend/src/app/pages/settings/select/select.component.scss
@@ -1,5 +1,6 @@
 @media only screen and (max-width: 768px){
     #select-box {
-        margin-left: 20%;
+        text-align: center;
+        margin: 0 auto;
     }
 }
