--- a/Frontend/src/app/ui/layout/main/main.component.html
+++ b/Frontend/src/app/ui/layout/main/main.component.html
@@ -1,5 +1,5 @@
   <main class="content-area">
       <router-outlet></router-outlet>
   </main>
-  <app-sidebar class="sidenav" [clr-nav-level]="1">
+  <app-sidebar style="background-color: #e8e8e8;" class="sidenav" [clr-nav-level]="1">
   </app-sidebar>
