--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
     </a>
   </ng-container>
 
-  <a clrVerticalNavLink routerLinkActive="active" routerLink="./credits">
+  <a clrVerticalNavLink routerLinkActive="active" routerLink="./credits" id="bottom_link">
     <clr-icon shape="certificate" clrVerticalNavIcon></clr-icon>
     Credit
   </a>
